Bug 374767 - Help action in accountwizard does not open the correct documentation
Summary: Help action in accountwizard does not open the correct documentation
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-08 17:48 UTC by Burkhard Lück
Modified: 2017-02-21 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burkhard Lück 2017-01-08 17:48:13 UTC
accountwizard is a standalone application andalso launched at the first start of kmail.
Clicking the Help button in accountwizard tries to open the non existent accountwizard docbook afaik via the componentname "accountwizard" in the kaboutdata, but the corresponding documentation is in the kmail handbook, see https://docs.kde.org/trunk5/en/pim/kmail/getting-started.html#account-wizard.
How to solve this issue?
Split the accountwizard part out of the kmail documentation into an own docbook?
Makes some sense, because accountwizard can be launched as standalone application
Comment 1 Laurent Montel 2017-02-21 07:42:19 UTC
Git commit 536697fbc90166302968423cba24f17748043f35 by Montel Laurent.
Committed on 21/02/2017 at 07:41.
Pushed by mlaurent into branch 'master'.

Fix Bug 374767 - Help action in accountwizard does not open the correct documentation

FIXED-IN: 5.5.0

M  +1    -0    src/CMakeLists.txt
M  +7    -0    src/dialog.cpp
M  +1    -0    src/dialog.h

https://commits.kde.org/kmail-account-wizard/536697fbc90166302968423cba24f17748043f35