Fix Bug 374767 - Help action in accountwizard does not open the correct documentation

FIXED-IN: 5.5.0
BUG: 374767